@@ -1,3 +1,4 @@
+3/17/14 #40 eliminate display of incorrect intermediate 'Molecule count' values, remove dependency in PHModel on Solution
 3/13/14 delete TODO.txt, since it's specific to 'master' branch
 3/13/14 #39 provide navbar-specific icons to improve quality
 # 1.0.0-rc.1 3/8/14
